# OscCpp

./: CMakeLists.txt
ext/oscpp/: util.hpp
src/: OscServer.hpp  config.hpp  config.json  log.cpp  main.cpp  math.cpp  ogl.cpp  ogl.hpp  transport.hpp
src/shaders/: blur.frag.glsl  edge.frag.glsl  opacity.frag.glsl
